background animation added

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1> Calculator</h1>
-    </header>
+    <canvas id="bg__canvas"></canvas>
     <main>
         <div class='calculator'>
             <div class='calculator__display'>
@@ -26,4 +24,5 @@
     </main>
 </body>
 <script src="script.js"></script>
+<script src="animation.js"></script>
 </html>
