minor: toggle theme button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class='calculator'>
             <div class="calculator__header">
                 <img src="img/logo.png" class="logo">
+                <div class="theme__button">
+                    <i id="theme-button" class="fa-solid fa-moon"></i>
+                </div>
                 <div class="social-icons">
                     <a href="https://github.com/nmz1z/"><i class="fa-brands fa-github"></i></a>
                     <a href="https://twitter.com/nmz1z_"><i class="fa-brands fa-twitter"></i></a>
