link: main page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class='calculator__buttons-container'>
             </div>
             <div class="calculator__footer">
-                <p>nmz1z</p>
+                <p><a href="https://nmz1z.github.io/landing-page/">nmz1z</a></p>
                 <p>2022</p>
             </div>
         </div>
