simplified; all JS injected now

--- a/index.html
+++ b/index.html
@@ -11,30 +11,9 @@
 </head>
 <body>
     <canvas id="bg__canvas"></canvas>
-    <main>
-        <div class='calculator'>
-            <div class="calculator__header">
-                <img src="img/logo.png" class="logo">
-                <div class="theme__button">
-                    <i id="theme-button" class="fa-solid fa-moon"></i>
-                </div>
-                <div class="social-icons">
-                    <a href="https://github.com/nmz1z/"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://twitter.com/nmz1z_"><i class="fa-brands fa-twitter"></i></a>
-                </div>
-            </div>
-            <div class='calculator__display'>
-                <p class="display__number--small" id="display-expression">
-                </p>
-                <p class="display__number--big" id="display-number">0</p>
-            </div>
-            <div class='calculator__buttons-container'>
-            </div>
-            <div class="calculator__footer">
-                <p><a href="https://nmz1z.github.io/landing-page/">nmz1z</a></p>
-                <p>2022</p>
-            </div>
-        </div>
+    <button id="magic-button" class="magic-button">Don't click</button>
+    <main class="calculator-container">
+        <!-- calculatorS here -->
     </main>
 </body>
 <script src="script.js"></script>
