--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel='stylesheet' href='style.css'>
     <script src="https://kit.fontawesome.com/1d631eaa19.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap" rel="stylesheet">
     <script src="data.js"></script>
     <title>Document</title>
 </head>
@@ -16,6 +19,6 @@
         <!-- calculatorS here -->
     </main>
 </body>
-<script src="script.js"></script>
+<script src="app.js"></script>
 <script src="animation.js"></script>
 </html>
