--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <canvas id="bg__canvas"></canvas>
-    <button id="magic-button" class="magic-button">Create Calculator</button>
+    <button id="magic-button" class="magic-button">Click here</button>
     <main class="calculator-container">
         <!-- calculatorS here -->
     </main>
